Bug 741728 - Previous conversations should be collapsed by default. r=florian, ui-r=florian, a=Standard8.

--- a/mail/themes/qute/mail/chat-aero.css
+++ b/mail/themes/qute/mail/chat-aero.css
@@ -156,7 +156,6 @@
     color: -moz-dialogtext !important;
   }
 
-  #logList > listitem,
   #nicklist > listitem {
     border-width: 1px !important;
     outline: none !important;
